<resources>
    <string name="app_name">Gent</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="explore">Explore</string>
    <string name="bookmark">Bookmark</string>
    <string name="about">About</string>
    <string name="no_internet">No Internet Connection</string>

    <string name="error_code_400">Oops! Something went wrong. Please check your input and try again.</string>
    <string name="error_code_401">Your session has expired. Please log in again.</string>
    <string name="error_code_403">Sorry, you don\'t have permission to access this resource.</string>
    <string name="error_code_404">We couldn\'t find what you\'re looking for.</string>
    <string name="error_code_408">The request timed out. Please try again.</string>
    <string name="error_code_429">You\'re making requests too quickly. Please slow down.</string>
    <string name="error_code_500">We\'re experiencing some issues. Please try again later.</string>
    <string name="error_code_default">An unexpected error occurred. Please try again.</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="see_all">See All</string>

    <string name="seats_left">%d Seats left</string>
    <string name="seats_left_new_line">%d\nSeats left</string>
    <string name="finished_event">Finished Event</string>

    <string name="upcoming_event_empty_msg">No upcoming event available :(</string>
    <string name="finished_event_empty_msg">No finished event available :(</string>
    <string name="search_for_events">Search for events</string>
    <string name="your_bookmark">Your Bookmark</string>
    <string name="your_bookmark_is_empty">Your bookmark is empty</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="organizer">Organizer</string>
    <string name="register">Register</string>
    <string name="afrinaldi">Afrinaldi</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="afrinaldi_genz0_gmail_com">afrinaldi.genz0@gmail.com</string>
    <string name="about_event">About Event</string>
</resources>