<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ivImageEvent"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                android:contentDescription="@null"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bookmarkToggleButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle_round_8"
                android:checkable="true"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="@color/colorBackgroundLabel"
                app:icon="@drawable/bookmark_toggle"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/colorSecondary"
                app:layout_constraintEnd_toEndOf="@+id/ivImageEvent"
                app:layout_constraintTop_toTopOf="@+id/ivImageEvent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/quotaView"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="-32dp"
                app:cardCornerRadius="32dp"
                app:cardElevation="8dp"
                app:layout_constraintTop_toBottomOf="@id/ivImageEvent"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorBackground">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/personThree"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="-16dp"
                        android:background="@color/colorBackground"
                        app:contentPadding="2dp"
                        android:src="@drawable/person1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/personTwo"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/imageViewCircle" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/personTwo"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="-16dp"
                        android:background="@color/colorBackground"
                        app:contentPadding="2dp"
                        android:src="@drawable/person2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/personOne"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/imageViewCircle" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/personOne"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/colorBackground"
                        app:contentPadding="2dp"
                        android:src="@drawable/person3"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/imageViewCircle" />

                    <TextView
                        android:id="@+id/tvQuotaEvent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/personThree"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:paddingHorizontal="8dp"
                        style="@style/TextAppearance.Gent.TitleMedium"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvNameEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Gent.Headline1"
                app:layout_constraintTop_toBottomOf="@id/quotaView"
                android:textColor="@color/colorOnBackground"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingHorizontal="16dp"/>

            <ImageView
                android:id="@+id/dateImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@null"
                android:background="@drawable/rectangle_round_8"
                android:backgroundTint="@color/colorPrimary20"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_upcoming"
                android:scaleType="center"
                app:layout_constraintTop_toBottomOf="@id/tvNameEvent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvDateEvent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.Gent.BodyMedium"
                android:textColor="@color/colorOnBackground"
                android:gravity="start|center"
                android:paddingHorizontal="16dp"
                app:layout_constraintBottom_toTopOf="@id/dateLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/dateImage"
                app:layout_constraintTop_toTopOf="@id/dateImage" />

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/date"
                android:paddingHorizontal="16dp"
                android:gravity="start|center"
                android:textColor="@color/colorGray"
                style="@style/TextAppearance.Gent.LabelSmall"
                app:layout_constraintBottom_toBottomOf="@id/dateImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/dateImage"
                app:layout_constraintTop_toBottomOf="@id/tvDateEvent"/>

            <ImageView
                android:id="@+id/locationImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@null"
                android:background="@drawable/rectangle_round_8"
                android:backgroundTint="@color/colorPrimary20"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_location"
                android:scaleType="center"
                app:layout_goneMarginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/dateImage"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvLocationEvent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.Gent.BodyMedium"
                android:textColor="@color/colorOnBackground"
                android:gravity="start|center"
                android:paddingHorizontal="16dp"
                app:layout_constraintBottom_toTopOf="@id/locationLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/locationImage"
                app:layout_constraintTop_toTopOf="@id/locationImage" />

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/location"
                android:paddingHorizontal="16dp"
                android:gravity="start|center"
                android:textColor="@color/colorGray"
                style="@style/TextAppearance.Gent.LabelSmall"
                app:layout_constraintBottom_toBottomOf="@id/locationImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/locationImage"
                app:layout_constraintTop_toBottomOf="@id/tvLocationEvent"/>

            <ImageView
                android:id="@+id/organizerImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@null"
                android:background="@drawable/rectangle_round_8"
                android:backgroundTint="@color/colorPrimary20"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_about"
                android:scaleType="center"
                app:layout_goneMarginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/locationImage"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvOrganizerEvent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/TextAppearance.Gent.BodyMedium"
                android:textColor="@color/colorOnBackground"
                android:gravity="start|center"
                android:paddingHorizontal="16dp"
                app:layout_constraintBottom_toTopOf="@id/organizerLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/organizerImage"
                app:layout_constraintTop_toTopOf="@id/organizerImage" />

            <TextView
                android:id="@+id/organizerLabel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/organizer"
                android:paddingHorizontal="16dp"
                android:gravity="start|center"
                android:textColor="@color/colorGray"
                style="@style/TextAppearance.Gent.LabelSmall"
                app:layout_constraintBottom_toBottomOf="@id/organizerImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/organizerImage"
                app:layout_constraintTop_toBottomOf="@id/tvOrganizerEvent"/>

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_event"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="16dp"
                style="@style/TextAppearance.Gent.Subtitle1"
                android:textColor="@color/colorOnBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/organizerImage"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorOnBackground"
                android:layout_marginBottom="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionLabel"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/overlaps_view"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/rectangle_round_8"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorBackground"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>